# DirAlpha

./: .env  .gitignore  README.md  WARP.md  debug_wrds.py  main.py  pyproject.toml  run_pipeline.py  setup.sh  walkthrough.md
data/: analysis_hdfe.parquet  boardex_link.parquet  ccm.parquet  execucomp.parquet  ff5_factors_daily.parquet
director_alpha/: base_phase.py  config.py  db.py  debug_wrds_tables.py  history_utils.py  io.py  log.py  phase0_universe.py  phase1_performance.py  phase1b_ma.py  phase2_ceo_turnover.py  phase2b_compensation.py  phase2c_employment_history.py  phase3_directors.py  phase3b_returns.py  phase3c_director_history.py  phase4_assembly.py  phase5_connectivity.py  transform.py  utils.py  verify_name_matching.py
director_alpha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
director_alpha/event_study/: __init__.py  alignment.py  constants.py  metrics.py  models.py  runner.py
director_alpha/settings/: __init__.py  settings.py
tests/: conftest.py  generate_dummy_data.py  test_phase0.py  test_transform.py  test_wrds_loading.py
