[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[project]
name = "director-alpha"
version = "0.1.0"
description = "Data workflow system for academic finance research analyzing director selection and CEO turnover"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "networkx",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["director_alpha*"]
